--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 [dependencies.amethyst]
 version = "0.13.2"
 features = ["vulkan", "tiles"]
+
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
