--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+ron = "0.5.1"
+
 [dependencies.amethyst]
 version = "0.13.2"
 features = ["vulkan", "tiles"]
